--- a/src/styles/chatListStyles.module.css
+++ b/src/styles/chatListStyles.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 88vh;
   width: 100vw;
-  overflow-y: auto;
+  overflow-y: scroll;
   overflow-x: hidden;
   background-color: white;
 }
