--- a/src/styles/chatBlockStyles.module.css
+++ b/src/styles/chatBlockStyles.module.css
@@ -79,11 +79,15 @@
   width: 2vh;
 }
 
+.link {
+  text-decoration: none;
+}
+
 hr {
   border: none;
   color: grey;
   background-color: grey;
   height: 1px;
   width: calc(100vw - 10vh);
-  margin-left: 10vh;
+  margin: 0 0 0 10vh;
 }
