--- a/src/styles/messageBlockStyles.module.css
+++ b/src/styles/messageBlockStyles.module.css
@@ -62,7 +62,7 @@
   padding: 1vh;
 }
 
-.content {
+.textContent {
   display: flex;
   align-self: flex-start;
   font-size: 3vh;
@@ -70,6 +70,17 @@
   padding: 1vh 1.2vh;
   line-height: 1;
   word-break: break-all;
+}
+
+.imageContent {
+  max-width: 80%;
+  max-height: 80vh;
+  margin: 3vh 0vh 3vh 3vh;
+}
+
+.audioContent {
+  width: 80%;
+  min-width: 40vh;
 }
 
 .time {
